--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,17 +1,13 @@
 version: 2
 updates:
-  # Maintain Go module dependencies
-  - package-ecosystem: "gomod"
-    directory: "/"
+  - package-ecosystem: gomod
+    directory: /
     schedule:
-      interval: "weekly"
+      interval: weekly
     groups:
       dependencies:
-        patterns:
-          - "*"
-
-  # Maintain GitHub Actions versions
-  - package-ecosystem: "github-actions"
-    directory: "/"
+        patterns: ["*"]
+  - package-ecosystem: github-actions
+    directory: /
     schedule:
-      interval: "monthly"
+      interval: monthly
