--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,24 +2,18 @@ name: Docker Build
 
 on:
   push:
-    branches: [ "master", "main" ]
+    branches: [master, main]
   pull_request:
-    branches: [ "master", "main" ]
+    branches: [master, main]
 
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and export
-        uses: docker/build-push-action@v6
+      - uses: actions/checkout@v6
+      - uses: docker/setup-buildx-action@v3
+      - uses: docker/build-push-action@v6
         with:
           context: .
-          file: ./Dockerfile
           push: false
           tags: reddit-gallery-dl:latest
