--- a/.github/workflows/go-build-test.yml
+++ b/.github/workflows/go-build-test.yml
@@ -2,29 +2,19 @@ name: Go CI
 
 on:
   push:
-    branches: [ "master", "main" ]
+    branches: [master, main]
   pull_request:
-    branches: [ "master", "main" ]
+    branches: [master, main]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v6
-
-    - name: Set up Go
-      uses: actions/setup-go@v6
-      with:
-        go-version: '1.24'
-
-    - name: Verify dependencies
-      run: go mod verify
-
-    - name: Run go vet
-      run: go vet ./...
-
-    - name: Run tests
-      run: go test -v ./...
-
-    - name: Build
-      run: go build -v ./...
+      - uses: actions/checkout@v6
+      - uses: actions/setup-go@v6
+        with:
+          go-version: '1.24'
+      - run: go mod verify
+      - run: go vet ./...
+      - run: go test ./...
+      - run: go build ./...
